--- a/tool.html
+++ b/tool.html
@@ -179,7 +179,7 @@
 <body>
     <h2>閃炫結合記錄工具</h2>
     <form id="configForm">
-        <p title="像這樣" class="title">滑鼠停留在文字上時會顯示功能</p>
+        <!---<p title="像這樣" class="title">滑鼠停留在文字上時會顯示功能</p>--->
         <label for="account" title="帳號切換">帳號:</label>
         <select id="account" name="account" onchange="updateStartCount()" title="帳號切換">
             <option value="帳號1">帳號1</option>
