--- a/tool.html
+++ b/tool.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>閃炫結合記錄工具</title>
+    <title>閃炫記錄工具</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -177,7 +177,7 @@
 </head>
 
 <body>
-    <h2>閃炫結合記錄工具</h2>
+    <h2>閃炫記錄工具</h2>
     <form id="configForm">
         <!---<p title="像這樣" class="title">滑鼠停留在文字上時會顯示功能</p>--->
         <label for="account" title="帳號切換">帳號:</label>
