--- a/tool.html
+++ b/tool.html
@@ -55,6 +55,7 @@
 
         select,
         input[type="number"],
+        input[type="text"],
         button {
             width: 100%;
             padding: 10px;
@@ -135,7 +136,7 @@
         #output {
             max-width: 620px;
             margin: 20px auto;
-            height: 100px;
+            height: 200px;
             padding: 10px;
             background-color: #fff;
             border-radius: 8px;
@@ -188,7 +189,8 @@
             <option value="帳號4">帳號4</option>
             <option value="帳號5">帳號5</option>
             <option value="帳號6">帳號6</option>
-        </select><br>
+        </select>
+        <input type="text" id="note" name="note" placeholder="帳號註解或角色名稱" title="可有可無"><br>
         <label for="server" title="請選擇伺服器">伺服器:</label>
         <select id="server" name="server" onchange="updateStartCount()" title="請選擇伺服器">
             <option value="艾麗亞">艾麗亞</option>
@@ -198,7 +200,7 @@
             <option value="愛麗西亞">愛麗西亞</option>
             <option value="殺人鯨">殺人鯨</option>
         </select><br>
-        <label for="shape" title="閃炫1:54 結合1:108">方塊類型:</label>
+        <b  title="閃炫1:54 結合1:108">方塊類型:</b>
         <div class="shape-options">
             <input type="radio" id="flashy" name="shape" value="閃炫" onchange="updateStartCount()">
             <label for="flashy">閃炫</label>
@@ -322,6 +324,7 @@
                         updateStatsTable(); // 更新
                         updateLocalStorage(); // 更新
                         updateStartCount();
+                        setUndoOutputText();
                     }
                     UndoCount += 1;
                     break;
@@ -331,6 +334,7 @@
                         updateStatsTable(); // 更新
                         updateLocalStorage(); // 更新
                         updateStartCount();
+                        setUndoOutputText();
                     }
                     UndoCount += 1;
                     break;
@@ -340,6 +344,7 @@
                         updateStatsTable(); // 更新
                         updateLocalStorage(); // 更新
                         updateStartCount();
+                        setUndoOutputText();
                     }
                     UndoCount += 1;
                     break;
@@ -350,6 +355,7 @@
                         updateStatsTable(); // 更新
                         updateLocalStorage(); // 更新
                         updateStartCount();
+                        setUndoOutputText();
                     }
                     UndoCount += 1;
                     break;
@@ -360,6 +366,7 @@
                         updateStatsTable(); // 更新
                         updateLocalStorage(); // 更新
                         updateStartCount();
+                        setUndoOutputText();
                     }
                     UndoCount += 1;
                     break;
@@ -368,6 +375,10 @@
                     alert("最多五步!");
                     break;
             }
+            
+
+        }
+        function setUndoOutputText(){
             var outputDiv = document.getElementById("output");
             var serverConfig = "已回到上一步！"
             var currentConfig = outputDiv.innerHTML;
@@ -377,7 +388,6 @@
                 lines.pop(); // 刪除最後一行
                 outputDiv.innerHTML = lines.join("<br>");
             }
-
         }
         //-----------------------回上一步類-----------------------\\
 
