--- a/tool.html
+++ b/tool.html
@@ -189,8 +189,8 @@
             <option value="帳號4">帳號4</option>
             <option value="帳號5">帳號5</option>
             <option value="帳號6">帳號6</option>
-        </select>
-        <input type="text" id="note" name="note" placeholder="帳號註解或角色名稱" title="可有可無"><br>
+        </select><br>
+        <!-- <input type="text" id="note" name="note" placeholder="帳號註解或角色名稱" title="可有可無"> --> 
         <label for="server" title="請選擇伺服器">伺服器:</label>
         <select id="server" name="server" onchange="updateStartCount()" title="請選擇伺服器">
             <option value="艾麗亞">艾麗亞</option>
