--- a/dev.html
+++ b/dev.html
@@ -136,13 +136,29 @@
         #output {
             max-width: 620px;
             margin: 20px auto;
-            height: 200px;
             padding: 10px;
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             overflow-y: scroll;
             text-align: left;
+            border: 2px solid #007bff;
+            /* 添加邊框以增加可見性 */
+            color: #333;
+            /* 調整文字顏色為深灰色 */
+            font-size: 16px;
+            /* 調整字體大小 */
+            line-height: 1.6;
+            /* 調整行高 */
+        }
+
+        #output::before {
+            content: "結果預覽";
+            /* 添加前置內容以指示此區域的用途 */
+            display: block;
+            font-weight: bold;
+            font-size: 18px;
+            margin-bottom: 10px;
         }
 
         .center-text {
@@ -150,41 +166,149 @@
         }
 
         table {
-            max-width: 800px; /* 增加表格最大寬度 */
+            max-width: 800px;
+            /* 增加表格最大寬度 */
             margin: 20px auto;
             border-collapse: collapse;
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            overflow: hidden; /* 將溢出部分隱藏，使表格外觀更加整潔 */
+            overflow: hidden;
+            /* 將溢出部分隱藏，使表格外觀更加整潔 */
         }
 
-        th, td {
-            padding: 12px 15px; /* 調整單元格內邊距 */
+        th,
+        td {
+            padding: 12px 15px;
+            /* 調整單元格內邊距 */
             border-bottom: 1px solid #ddd;
             text-align: center;
         }
 
         th {
-            background-color: #0077cc; /* 將標題行背景顏色改為較柔和的藍色 */
+            background-color: #007bff;
+            /* 將標題行背景顏色改為藍色 */
             color: #fff;
+            /* 將標題行文字顏色改為白色 */
             font-weight: bold;
             text-transform: uppercase;
+            /* 將標題文字轉換為大寫 */
         }
 
-
         tbody tr:nth-child(even) {
-            background-color: #f2f2f2; /* 隔行添加淺灰色背景，增加易讀性 */
+            background-color: #f2f2f2;
+            /* 隔行添加淺灰色背景，增加易讀性 */
         }
 
         tbody tr:hover {
-            background-color: #e5e5e5; /* 滑鼠懸停時添加淺灰色背景，增強交互效果 */
+            background-color: #e5e5e5;
+            /* 滑鼠懸停時添加淺灰色背景，增強交互效果 */
+        }
+
+        /* 白天模式 */
+        .day-mode {
+            background-color: #ffffff;
+            /* 白色背景 */
+            color: #333333;
+            /* 黑色文字 */
+        }
+
+        /* 深夜模式 */
+        /* 全局的深夜模式樣式 */
+        .night-mode {
+            background-color: #121212;
+            /* 深灰色背景 */
+            color: #ffffff;
+            /* 白色文字 */
+
+            form {
+                background-color: #1f1f1f;
+                /* 深灰色背景 */
+                color: #ffffff;
+                /* 白色文字 */
+            }
+
+            #output {
+                background-color: #1f1f1f;
+                /* 深灰色背景 */
+                color: #ffffff;
+                /* 白色文字 */
+
+            }
+
+            /* 修改表格樣式 */
+            table {
+                background-color: #1f1f1f;
+                /* 深灰色背景 */
+                color: #ffffff;
+                /* 白色文字 */
+            }
+
+            /* 修改表格標題行的樣式 */
+            th {
+                background-color: #333333;
+                /* 深灰色背景 */
+                color: #ffffff;
+                /* 白色文字 */
+            }
+
+            /* 修改表格偶數行的樣式 */
+            tbody tr:nth-child(even) {
+                background-color: #333333;
+                /* 深灰色背景 */
+            }
+
+            /* 修改鏈接的樣式 */
+            a {
+                color: #4da6ff;
+                /* 淺藍色 */
+            }
+
+            /* 其他元素的樣式可以根據需要進行修改 */
+        }
+
+        /* 切換模式按鈕樣式 */
+        #mode-toggle {
+            background-color: transparent;
+            /* 透明背景 */
+            color: #ffffff;
+            /* 白色文字 */
+            border: 2px solid #ffffff;
+            /* 白色邊框 */
+            padding: 10px 20px;
+            /* 內邊距 */
+            border-radius: 5px;
+            /* 圓角 */
+            cursor: pointer;
+            /* 指針類型 */
+            transition: background-color 0.3s, color 0.3s;
+            /* 過渡效果 */
+        }
+
+        /* 深夜模式下按鈕樣式 */
+        .night-mode #mode-toggle {
+            background-color: #333333;
+            /* 深灰色背景 */
+            border-color: #ffffff;
+            /* 白色邊框 */
+            color: #ffffff;
+            /* 白色文字 */
+        }
+
+        /* 滑鼠懸停時的按鈕樣式 */
+        #mode-toggle:hover {
+            background-color: #ffffff;
+            /* 白色背景 */
+            color: #333333;
+            /* 黑色文字 */
         }
     </style>
 </head>
 
 <body>
     <h2>閃炫記錄工具</h2>
+    
+
     <form id="configForm">
         <!---<p title="像這樣" class="title">滑鼠停留在文字上時會顯示功能</p>--->
         <label for="account" title="帳號切換">帳號:</label>
@@ -196,7 +320,7 @@
             <option value="帳號5">帳號5</option>
             <option value="帳號6">帳號6</option>
         </select><br>
-        <input type="text" id="note" name="note" placeholder="筆記空間" title="無特殊功能單純筆記">
+        <!-- <input type="text" id="note" name="note" placeholder="帳號註解或角色名稱" title="可有可無"> -->
         <label for="server" title="請選擇伺服器">伺服器:</label>
         <select id="server" name="server" onchange="updateStartCount()" title="請選擇伺服器">
             <option value="艾麗亞">艾麗亞</option>
@@ -239,6 +363,7 @@
         <h3 title="localStorage本機儲存 五天後開啟網頁會自動刪除舊的資料" class="title">網頁重開會有紀錄</h3>
         <h3 title="" class="title">刪除全部資料按這顆按鈕</h3>
         <button type="button" class="del" onclick="delLocalStorage()" title="為了防止誤觸最終顆數按d或D這顆才會生效">刪除全部</button>
+        <button id="mode-toggle">切換模式</button>
     </div>
 
 
@@ -475,7 +600,7 @@
                 alert("請確認最終顆數。");
                 return;
             }
-            
+
             //計算
             var price;
             if (shape === "閃炫") {
@@ -569,6 +694,16 @@
             }
         }
         //-----------------------狀態更新類-----------------------\\
+        // 獲取按鈕和body元素
+        var modeToggle = document.getElementById('mode-toggle');
+        var body = document.body;
+
+        // 監聽按鈕的點擊事件
+        modeToggle.addEventListener('click', function () {
+            // 切換深夜模式class
+            body.classList.toggle('night-mode');
+        });
+
 
 
         //離開網頁時詢問
